<resources>

    <!-- -->
    <string name="app_name">Spotify Streamer</string>

    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_share">Share</string>

    <!-- -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_controls_key" translatable="false">pref_control</string>
    <string name="pref_controls_title">Controls on notification</string>
    <string name="pref_controls_summary">Shows music controls on notifications</string>

    <string name="pref_country_key" translatable="false">pref_country</string>
    <string name="pref_country_title">Country</string>
    <string name="pref_country_summary">Select your country</string>

    <!-- -->
    <string name="search_header">Search for:</string>
    <string name="artist_name">Artist\'s name</string>
    <string name="no_artist">No artist found.</string>
    <string name="no_track">No track found.</string>

    <!-- -->
    <string name="title_activity_tracks">Top 10 Tracks</string>

    <!-- -->
    <string name="title_activity_player">Now playing</string>


    <!--Country name / code according to ISO 3166-2 (sample subset)-->
    <string name="country_denmark">Denmark</string>
    <string name="country_denmark_code" translatable="false">"DK"</string>

    <string name="country_france">France</string>
    <string name="country_france_code" translatable="false">"FR"</string>

    <string name="country_italy">Italia</string>
    <string name="country_italy_code" translatable="false">"IT"</string>

    <string name="country_uk">United Kingdom</string>
    <string name="country_uk_code" translatable="false">"GB"</string>

    <string name="country_usa">USA</string>
    <string name="country_usa_code" translatable="false">"US"</string>

    <string name="hello_world">Hello world!</string>

</resources>
