<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_now_playing"
        android:title="@string/action_now_playing"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="80"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="80"
        android:visible="false"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        />


</menu>
